--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   permission_handler: ^11.3.1
   speech_to_text: ^7.0.0
+  dotted_border: ^2.1.0
+  linear_progress_bar: ^1.1.3
 
 dev_dependencies:
   flutter_test:
